fixed delete button going off screen & more file info button

--- a/src/apps/code-editor/src/app/components/FileActions/components/Delete/Delete.less
+++ b/src/apps/code-editor/src/app/components/FileActions/components/Delete/Delete.less
@@ -2,7 +2,10 @@
 
 .DeleteBtn {
   // margin-left: auto; // pin to flex container right
-  padding-right: 16px;
+  padding-right: 250px;
+  @media screen and (max-width: 1999px) {
+    padding-right: 75px;
+  }
 }
 
 .DeleteFileModal {
